# XMLBuilder

./: CMakeLists.txt  LICENSE  README.md  annotated.html  annotated_dup.js  classXMLBuilder_1_1Node-members.html  classXMLBuilder_1_1Node.html  classXMLBuilder_1_1Node.js  classXMLBuilder_1_1ParentNode-members.html  classXMLBuilder_1_1ParentNode.html  classXMLBuilder_1_1ParentNode.js  classXMLBuilder_1_1RootNode-members.html  classXMLBuilder_1_1RootNode.html  classXMLBuilder_1_1RootNode.js  classXMLBuilder_1_1ValueNode-members.html  classXMLBuilder_1_1ValueNode.html  classXMLBuilder_1_1ValueNode.js  classXMLBuilder_1_1meta_1_1Attributable-members.html  classXMLBuilder_1_1meta_1_1Attributable.html  classXMLBuilder_1_1meta_1_1Attributable.js  classXMLBuilder_1_1meta_1_1ChildrenStore-members.html  classXMLBuilder_1_1meta_1_1ChildrenStore.html  classXMLBuilder_1_1meta_1_1ChildrenStore.js  classXMLBuilder_1_1meta_1_1Generatable-members.html  classXMLBuilder_1_1meta_1_1Generatable.html  classXMLBuilder_1_1meta_1_1Generatable.js  classXMLBuilder_1_1meta_1_1NodeBase-members.html  classXMLBuilder_1_1meta_1_1NodeBase.html  classXMLBuilder_1_1meta_1_1NodeBase.js  classXMLBuilder_1_1meta_1_1Tagged-members.html  classXMLBuilder_1_1meta_1_1Tagged.html  classXMLBuilder_1_1meta_1_1Tagged.js  classes.html  conceptXMLBuilder_1_1types_1_1ChildableNodeBased.html  conceptXMLBuilder_1_1types_1_1Floating.html  conceptXMLBuilder_1_1types_1_1Integral.html  conceptXMLBuilder_1_1types_1_1Stringable.html  conceptXMLBuilder_1_1types_1_1Stringlike.html  conceptXMLBuilder_1_1types_1_1Strings.html  conceptXMLBuilder_1_1types_1_1XMLNodeBased.html  (+33 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: CMakeLists.txt  Doxyfile
include/: xmlbuilder.hpp
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  concepts_0.js  concepts_1.js  concepts_2.js  enums_0.js  enumvalues_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+18 more)
tests/: CMakeLists.txt  attribute_tests.cpp  chaining_tests.cpp  child_store_tests.cpp  elemental_tests.cpp  full_functionality_tests.cpp  generate_tests.cpp  nesting_tests.cpp  node_casting_tests.cpp  other_tests.cpp  special_tests.cpp  tag_tests.cpp  utility_tests.cpp  value_node_tests.cpp
tests/utils/: common.hpp  defines.hpp
(+2 files in other folders)
